--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>		
+	<head>
+		<meta name="viewport" content="width=device-width" />
+		
         <link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/reset.css" media="all">       
 		<style type="text/css">
 			html {
