--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width" />
-		
+
         <link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/reset.css" media="all">       
 		<style type="text/css">
 			html {
@@ -18,7 +18,8 @@
 			header {				
 				text-transform: uppercase;				
 				color: white;
-				background-color: #d24726 ;
+				/*background-color: #d24726 ;*/
+				background-image: -webkit-linear-gradient(top, #da5232, #bf5339 100%);
 				padding: 10px 12px 10px 16px;
 			}
 			
@@ -97,7 +98,7 @@
 			.page-wrap {
 				min-height: 100%;
 				/* equal to footer height */
-				margin-bottom: -142px; 
+				margin-bottom: -130px; 
 			}
 			
 			.page-wrap:after {
@@ -158,12 +159,14 @@
 			
 			footer, .page-wrap:after {
 				/* .push must be the same height as footer */
-				height: 142px; 
+				height: 115px;
 			}
+			
 			footer {			
-				height: 142px;
-				color: #0b3535;
-				background-color: #e9f7f7;
+				color: #fff;
+				padding: 15px;
+				/*background-color: #e9f7f7;*/
+				background-image: -webkit-linear-gradient(top, #74aab7, #7ca5af  100%);
 			}
 			
 			/*
