--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
 			}
 			
 			footer {			
-				color: #fff;
+				color: #555;
 				padding: 15px;
 				/*background-color: #e9f7f7;*/
-				background-image: -webkit-linear-gradient(top, #74aab7, #7ca5af  100%);
+				background-image: -webkit-linear-gradient(top, #9fdfee, #80b0bb 100%);
 			}
 			
 			/*
