--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
 			}
 			
 			footer {			
-				color: #555;
+				color: #ddd;
 				padding: 15px;
 				/*background-color: #e9f7f7;*/
-				background-image: -webkit-linear-gradient(top, #9fdfee, #80b0bb 100%);
+				background-image: -webkit-linear-gradient(top, #999, #AAA 100%);
 			}
 			
 			/*
